Adding swagger to authentication routes
